# SQL-Engine

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sqlengine/: __init__.py  schema.py  sqltable.py
src/sqlengine/utils/: __init__.py  connection.py  html_repr.py  schema.py  sqlgen.py  statements.py  types.py
tests/: test.py
tests/src/: tables.py  utils.py
