[project]
name = "sqlengine"
version = "1.0.1"
description = "Cute sqlite3 wrapper for sql tables"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["sqlengine"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
